force-app/main/default/objects/City__c/City__c.object-meta.xml
<CustomObject>
    <description>Objeto que vai armazenar as cidades utilizadas pelos clientes</description>
    
    <label>Cidade</label>
    <nameField>
        <label>Nome da Cidade</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cidades</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>