force-app/main/default/objects/City__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Campo que indica se a cidade esta ativada ou desativada.</description>
    <inlineHelpText>Campo que indica se a cidade esta ativada ou desativada.</inlineHelpText>
    <label>Ativo?</label>
    <type>Checkbox</type>
</CustomField>