force-app/main/default/objects/City__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Campo para informar a descrição da cidade.</description>
    <inlineHelpText>Campo para informar a descrição da cidade.</inlineHelpText>
    <label>Descrição</label>
    <length>255</length>
    <type>Text</type>
</CustomField>