force-app/main/default/objects/City__c/fields/ExternalId__c.field-meta.xml
<CustomField>
    <fullName>ExternalId__c</fullName>
    <description>Campo referente ao ID da cidade no SAP.</description>
    <externalId>true</externalId>
    <inlineHelpText>Campo referente ao ID da cidade no SAP.</inlineHelpText>
    <label>Domicílio Fiscal</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>