force-app/main/default/objects/City__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ExternalId__c</columns>
    <columns>Active__c</columns>
    <columns>Description__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tudo</label>
</ListView>